Imager release history.  Older releases can be found in Changes.old

Imager 0.69 - 08 Sep 2009
===========

Bug fixes:

 - broken test fix - was attempting to call a function skip_all, when
   that should be a parameter to plan().

 - briefly document apidocs.perl, the tool used to build
   Imager::APIRef and make some minor enhancements

 - various minor documentation enhancements and fixes.

Imager 0.68 - 07 Sep 2009
===========

 - Imager->new(file => $filename) and other similar incantations will
   load the given file.
   https://rt.cpan.org/Ticket/Display.html?id=48261

Bug fixes:

 - avoid using CHECK as a label in Imager::Test
   http://nntp.x.perl.org/group/perl.cpan.testers/5220921

 - re-work most image file test files that require a library into
   separate library present/not present files to remove stupidly long
   conditionals

 - don't treat rubthrough() outside the bounds of the target image as
   an error.
   http://nntp.x.perl.org/group/perl.cpan.testers/5185716

Imager 0.67_01 - 02 Sep 2009
==============

Bug fixes:

 - correct documentation of default of raw image interleave read
   parameter
   https://rt.cpan.org/Ticket/Display.html?id=42074

 - add raw_ prefix to raw read parameters, though the original names
   still work.

 - fail the read if an invalid raw_interleave parameter is supplied

 - warn if no interleave or raw_interleave parameter is supplied,
   since the documented default was wrong, and incompatible with the
   write format

 - for reading raw images, if raw_storechannels > raw_datachannels,
   set the extra channels in the image to 0

 - when probing for executables like freetype-config, search for .bat
   and .cmd on MSWin32, as well as .exe.
   https://rt.cpan.org/Ticket/Display.html?id=49275

 - re-work the external libraries section of README:
   - list Debian and Redhat package names for each library
   - reformatting
   - update URLs

 - use the new EU::MM META_MERGE facility instead of generating